--- a/technologie-sieciowe-laboratorium/lab3/lab3.tex
+++ b/technologie-sieciowe-laboratorium/lab3/lab3.tex
@@ -187,13 +187,21 @@
       \hline
       Host początkowy & Adres IP & Host docelowy & Adres IP & Wynik \\
       \hline
-      Stacja robocza p. A & 10.0.193.2 & Router R1 & 10.0.193.1 & Połączno \\
-      Router R1 & 10.0.193.1 & Stacja robocza p. A & 10.0.193.2 & Połączno \\
-      Stacja robocza p. A & 10.0.193.2 & Router R1 & 10.0.193.1 & Połączno \\
-      Router R1 & 10.0.193.1 & Stacja robocza p. A & 10.0.193.2 & Połączno \\
+      Stacja robocza p. A       & 10.0.193.2    & Router R1             & 10.0.193.1  & Połączno \\
+      Router R1                 & 10.0.193.1    & Stacja robocza p. A   & 10.0.193.2  & Połączno \\
 
-      Router R1 & 10.0.194.65 & Router R2 & 10.0.195.66 & Połączno \\
-      Router R2 & 10.0.195.66 & Router R1 & 10.0.194.65 & Połączno \\
+      Stacja robocza p. A       & 10.0.193.2    & Router R2             & 10.0.192.1  & Połączno \\
+      Router R2                 & 10.0.192.1    & Stacja robocza p. A   & 10.0.193.2  & Połączno \\
+
+
+      Stacja robocza p. B       & 10.0.192.2    & Router R1             & 10.0.193.1  & Połączno \\
+      Router R1                 & 10.0.193.1    & Stacja robocza p. B   & 10.0.192.2  & Połączno \\
+
+      Stacja robocza p. B       & 10.0.192.2    & Router R2             & 10.0.192.1  & Połączno \\
+      Router R2                 & 10.0.192.1    & Stacja robocza p. B   & 10.0.192.2  & Połączno \\
+
+      Router R1 & 10.0.194.65   & Router R2   & 10.0.195.66   & Połączno \\
+      Router R2 & 10.0.194.66   & Router R1   & 10.0.194.65   & Połączno \\
       \hline
     \end{tabular}
   \end{center}
