--- a/grafika-jacek/spr_lab5/lab5.tex
+++ b/grafika-jacek/spr_lab5/lab5.tex
@@ -44,29 +44,30 @@ Celem ćwiczenia jest  ilustracja możliwości oświetlania obiektów na scenach
 
 \section{Zadanie 1}
 \paragraph{}
-Pierwsze zadanie polegało na oświetleniu jednym żródłem śiwatła obracającego się jajka, stworzonego podczas laboratorium drugiego. W celu poprawnego oświetlenia jajka, korzystając z modelu Phong'a, należy wyliczyć wektor normalny z następujących zależności : \\
-Powierzchnia jajka opisana została równaniem : 
+Pierwsze zadanie polegało na oświetleniu jednym żródłem śiwatła obracającego się jajka, stworzonego podczas laboratorium drugiego. W celu poprawnego oświetlenia jajka, korzystając z modelu Phong'a, należy wyliczyć wektor normalny z następujących zależności : \\ \\
+Powierzchnia jajka opisana została równaniem : \\
  \begin{figure}[htbp]
       \begin{center}
        \includegraphics[width=\textwidth]{wzor_2.jpg}
 	\label{fig5}
       \end{center}
     \end{figure}
-Wektor normalny można znaleźć za pomocą nastepujących równań :
+\newpage
+Wektor normalny można znaleźć za pomocą nastepujących równań :\\
  \begin{figure}[htbp]
       \begin{center}
        \includegraphics[width=\textwidth]{wzor_0.jpg}
 	\label{fig5}
       \end{center}
     \end{figure}
-\newpage
-Czyli : 
+
+Gdzie : 
  \begin{figure}[htbp]
       \begin{center}
        \includegraphics[width=\textwidth]{wzor.jpg}
 	\label{fig5}
       \end{center}
-    \end{figure}
+    \end{figure} \newpage
 \subsection{Funkcje programu :}
 \subsubsection{Obliczanie współrzędnych powierzchni jajka i wektora normalnego}
 \lstset{ %
