--- a/urzadzenia-peryferyjne/lab5/spr/lab5.tex
+++ b/urzadzenia-peryferyjne/lab5/spr/lab5.tex
@@ -72,4 +72,68 @@ Gdzie :
 	\item *47 - suma kontrolna
 \end{itemize}
 
+\section{Program}
+\paragraph{}
+Napisana przez nas aplikacja miała za zadanie połączyć się z urządzeniem, odczytywać sekwencje wysyłane przez odbiornik GPS, parsować je i w rezultacie wyświetlać dane i lokować punkt na mapie. Językiem implementacji programu jest $C\#$.
+\subsection{Połączenie z portem szeregowym}
+W celu komunikacji aplikacji z portem szeregowym skorzystaliśmy z klasy $SerialPort$ .
+
+\lstset{ %
+    language=java,                % choose the language of the code
+    basicstyle=\scriptsize,       % the size of the fonts that are used for the code
+    numbers=left,                   % where to put the line-numbers
+    numberstyle=\scriptsize,      % the size of the fonts that are used for the line-numbers
+    stepnumber=10,                   % the step between two line-numbers. If it's 1 each line 
+                                    % will be numbered
+    numbersep=9pt,                  % how far the line-numbers are from the code
+    % backgroundcolor=\color{white},  % choose the background color. You must add \usepackage{color}
+    showspaces=false,               % show spaces adding particular underscores
+    showstringspaces=false,         % underline spaces within strings
+    showtabs=false,                 % show tabs within strings adding particular underscores
+    % frame=single,                 % adds a frame around the code
+    % tabsize=2,                  % sets default tabsize to 2 spaces
+    % captionpos=b,                   % sets the caption-position to bottom
+    breaklines=true,                % sets automatic line breaking
+    % breakatwhitespace=false,        % sets if automatic breaks should only happen at whitespace
+    % title=\lstname,                 % show the filename of files included with \lstinputlisting;
+                                    % also try caption instead of title
+    % escapeinside={\%*}{*)},         % if you want to add a comment within your code
+    % morekeywords={*,...}            % if you want to add more keywords to the set
+    }
+    \lstinputlisting{p1.cs}
+\newpage
+\section{Odczyt i parsowanie}
+\paragraph{}
+\lstset{ %
+    language=java,                % choose the language of the code
+    basicstyle=\scriptsize,       % the size of the fonts that are used for the code
+    numbers=left,                   % where to put the line-numbers
+    numberstyle=\scriptsize,      % the size of the fonts that are used for the line-numbers
+    stepnumber=10,                   % the step between two line-numbers. If it's 1 each line 
+                                    % will be numbered
+    numbersep=9pt,                  % how far the line-numbers are from the code
+    % backgroundcolor=\color{white},  % choose the background color. You must add \usepackage{color}
+    showspaces=false,               % show spaces adding particular underscores
+    showstringspaces=false,         % underline spaces within strings
+    showtabs=false,                 % show tabs within strings adding particular underscores
+    % frame=single,                 % adds a frame around the code
+    % tabsize=2,                  % sets default tabsize to 2 spaces
+    % captionpos=b,                   % sets the caption-position to bottom
+    breaklines=true,                % sets automatic line breaking
+    % breakatwhitespace=false,        % sets if automatic breaks should only happen at whitespace
+    % title=\lstname,                 % show the filename of files included with \lstinputlisting;
+                                    % also try caption instead of title
+    % escapeinside={\%*}{*)},         % if you want to add a comment within your code
+    % morekeywords={*,...}            % if you want to add more keywords to the set
+    }
+    \lstinputlisting{p2.cs}
+
+\subsection{GUI aplikacji}
+\begin{figure}[htbp]
+      \begin{center}
+       \includegraphics[width=\textwidth]{screen.PNG}
+	\label{fig5}
+      \end{center}
+    \end{figure}
+
 \end{document}
