--- a/urzadzenia-peryferyjne/lab5/spr/lab5.tex
+++ b/urzadzenia-peryferyjne/lab5/spr/lab5.tex
@@ -135,5 +135,6 @@ W celu komunikacji aplikacji z portem szeregowym skorzystaliśmy z klasy $Serial
 	\label{fig5}
       \end{center}
     \end{figure}
-
+\section{Wnioski}
+Protokół NMEA pozwala nam w łatwy sposób określić położenie obiornika GPS. Niestety z przyczyn od nas niezależnych nie byliśmy w stanie połączyć się z satelitą by odebrać realne położenie odbiornika. Na przykładowym obrazie (Rysunek 1), przedstawiamy parsowanie przykładowej sekwencji GGA znalezionej w internecie.
 \end{document}
