--- a/urzadzenia-peryferyjne/lab5/spr/lab5.tex
+++ b/urzadzenia-peryferyjne/lab5/spr/lab5.tex
@@ -40,7 +40,7 @@
 
 \section{Cel laboratorium}
 \paragraph{}
-Celem laboratorium było zapoznanie się z zasadą działania odbiornika GPS, sposobem jego połączenia się z komputerem, a także z możliwościami i budową protokołu $NMEA$.
+Celem laboratorium było zapoznanie się z zasadą działania odbiornika GPS, sposobem jego połączenia z komputerem, a także z możliwościami i budową protokołu $NMEA$.
 
 \section{Odbiornik GPS}
 \paragraph{}
@@ -133,6 +133,7 @@ W celu komunikacji aplikacji z portem szeregowym skorzystaliśmy z klasy $Serial
       \begin{center}
        \includegraphics[width=\textwidth]{screen.PNG}
 	\label{fig5}
+	\caption{Przykładowe okno programu}
       \end{center}
     \end{figure}
 \section{Wnioski}
