--- a/technologie-sieciowe-laboratorium/lab4/lab4.tex
+++ b/technologie-sieciowe-laboratorium/lab4/lab4.tex
@@ -49,8 +49,7 @@
   Z przydzielona puli adresów \textbf{10.4.0.64/27} stacje robocze otrzymały następujące adresy: PC1 - \textbf{10.4.0.66/27} oraz PC2 - \textbf{10.4.0.67/27}.
   \paragraph{}
   Stacje robocze zostały podłączone do przełącznika kablami prostymi.
-
-  Połączenie między stacjami zostało zweryfikowane przy użyciu programu \textbf{ping}.
+  Połączenie między stacjami zostało zweryfikowane przy użyciu komendy \textbf{ping}.
 
   \begin{figure}[H]
     \begin{center}
@@ -65,6 +64,16 @@
       \caption{Weryfikacja połączenia między stacją PC2 a PC1}
     \end{center}
   \end{figure}
+
+  \begin{figure}[H]
+    \begin{center}
+      \includegraphics[width=\textwidth]{img/t2.PNG}
+      \caption{Weryfikacja połączenia między stacją PC2 a Internetem}
+    \end{center}
+  \end{figure}
+
+  \paragraph{}
+  Na rysunkach 1 oraz 2 przedstawiono sposób weryfikacji połąćzenia między stacjami roboczymi PC1 i PC2. Wywołanie komendy \textbf{ping} w obu przypadkach zakonćżyło się pozytywnym rezultatem. W przypadku weryfikacji połączenia stacji roboczej PC2 z siecią Internet wynik był negatywny, co przedstawione jest na rysunku 3.
 
   \subsection{Podłączenie portu konsolowego}
   \paragraph{}
@@ -86,19 +95,23 @@
   \begin{figure}[htbp]
     \begin{center}
       \includegraphics[width=\textwidth]{img/t3.PNG}
-      \caption{Wynik polecenia $show\ version$}
-    \end{center}
-  \end{figure}
-
-  \begin{figure}[htbp]
-    \begin{center}
-      \includegraphics[width=\textwidth]{img/t4.PNG}
-      \caption{Wynik polecenia $show\ vlan$ na przełączniku S1}
+      \caption{Wynik polecenia \texttt{show version}}
     \end{center}
   \end{figure}
 
   \paragraph{}
-  Na Rysunku 4 przedstawiona jest konfiguracja VLAN przełącznika po zresetowaniu konfiguracji startowej. Przełącznik posiada skonfigurowaną jedną sieć VLAN (domyślną), do której przypisane są wszystkie porty.
+  Polecenie \texttt{show version} pokazuje informacje dotyczące przełącznika takie jak: producent, model urządzenia, wersja oprogramowania, licencja producenta, czas od uruchomienia (uptime), dane dotyczące ilości i typu interfejsów, numery seryjne podzespołów.
+
+  \begin{figure}[htbp]
+    \begin{center}
+      \includegraphics[width=\textwidth]{img/t4.PNG}
+      \caption{Wynik polecenia \texttt{show vlan} na przełączniku S1}
+      \label{fig:t4}
+    \end{center}
+  \end{figure}
+
+  \paragraph{}
+  Na Rysunku \ref{fig:t4} przedstawiona jest konfiguracja VLAN przełącznika po zresetowaniu konfiguracji startowej. Przełącznik posiada skonfigurowaną jedną sieć VLAN (domyślną), do której przypisane są wszystkie porty.
 
 
   \subsection{Tworzenie sieci VLAN}
@@ -110,11 +123,10 @@
 
     S1(config)#vlan 11
     S1(config-vlan)#name TymonTobolski
-    name
   \end{verbatim}
 
   \paragraph{}
-  Do powstałych sieci VLAN zostały dołączone porty przełącznika według Tabeli 1.
+  Do powstałych sieci VLAN zostały dołączone porty przełącznika według Tabeli \ref{tab:t1}.
   Poniżej znajdują się komendy użyte do przypisania portów do odpowiednich sieci.
 
   \begin{verbatim}
@@ -149,46 +161,66 @@
       \end{tabular}
     \end{center}
     \caption{Pula portów VLAN}
+    \label{tab:t1}
   \end{table}
 
-  \begin{figure}[htbp]
+  \begin{figure}[H]
     \begin{center}
       \includegraphics[width=\textwidth]{img/t6.PNG}
-      \caption{Wynik polecenia $show\ vlan$ na przełączniku S1}
+      \caption{Wynik polecenia \texttt{show vlan} na przełączniku S1}
+      \label{fig:t6}
     \end{center}
   \end{figure}
 
   \paragraph{}
-  TODO - analiza co sie zmienilo w komendzie show vlan
+  Na Rysunku \ref{fig:t6} przedstawiona jest konfiguracja VLAN przełącznika S1 po utworzeniu dwóch sieci VLAN i przypisanie do nich portów zgodnie z Tabelą \ref{tab:t1}. Z domyślnej sieci VLAN wyłączone zostały porty, które zostały przypisane do sieci VLAN 10 i 11.
 
-
+  \newpage
   \subsection{Weryfikacja połączenia}
+
+  \begin{figure}[H]
+    \begin{center}
+      \includegraphics[width=\textwidth]{img/aa.PNG}
+      \caption{Konfiguracje podłączenia stacji roboczych do przełącznika}
+      \label{fig:aa}
+    \end{center}
+  \end{figure}
+
   \paragraph{}
-  TODO - napisac ze pingi przeszly
+  Na Rysunku \ref{fig:aa} przedstawiono trzy możliwe konfiguracje podłącznie stacji roboczych do przełącznika. W pierwszej i trzeciej sytuacji obie stacje robocze są podłączone do portów tej samej sieci VLAN. W takim wypadku weryfikacja połączenia międzu dwoma stacjami za pomocą komendy \textbf{ping} zakończyła się sukcesem. W drugim przypadku stacje robocze zostały podłączone do portów dwóch różnych sieci VLAN, co skutkowało niepowodzeniem weryfikacji połączenia miedzy stacjami.
 
   \subsection{Konfiguracja dodatkowego przełącznika}
   \paragraph{}
   Drugi przełącznik (\textbf{S2}) został skonfigurowany analogicznie jak pierwszy, według puli portów z Tabeli 1.
 
-  \begin{figure}[htbp]
+  \begin{figure}[H]
     \begin{center}
       \includegraphics[width=\textwidth]{img/t8.PNG}
-      \caption{Wynik polecenia $show\ vlan$ na przełączniku S2}
+      \caption{Wynik polecenia \texttt{show vlan} na przełączniku S2}
+      \label{fig:t8}
     \end{center}
   \end{figure}
 
-  TODO - cos jeszcze
+  \paragraph{}
+  Rysunek \ref{fig:t8} przedstawia wynik polecenia \texttt{show vlan} po zakończeniu konfiguracji przełącznika S2.
 
   \subsection{Konfiguracja łącza trunkowego pomiędzy dwoma przełącznikami}
   \paragraph{}
-  TODO - bullshit jakis tutaj - podlaczono itp
+  Przełączniki zostały połączone za pomocą kabla z przeplotem (crossover) do portów FastEthernet 0/24.
 
+  \begin{figure}[H]
+    \begin{center}
+      \includegraphics[width=\textwidth]{img/bb.PNG}
+      \caption{Konfiguracje podłączenia stacji roboczych do przełączników}
+      \label{fig:bb}
+    \end{center}
+  \end{figure}
 
   \paragraph{}
-  TODO - weryfikacja polaczenia - tu w jednym dzialalo w drugim nie
+  Na Rysunku \ref{fig:bb} przedstawiono dwie możliwe konfiguracje podłączenia stacji roboczych do przełączników. W żadnej z wymienionych sytuacji weryfikacja połączenia między stacjami roboczymi zakończyłą się niepowodzeniem.
 
   \paragraph{}
-  TODO - konfiguracja trunka
+  W celu skonfigurowania łącza typu \emph{trunk} na przełącznikach zostały wykonane następujące komendy.
 
   \begin{verbatim}
     S1(config)#interface fa0/24
@@ -201,38 +233,50 @@
   \end{verbatim}
 
   \paragraph{}
-  TODO - weryfikacja polaczenia
+  Po skonfigurowaniu łącza typu \emph{trunk} weryfikacja połączenia między stacjami roboczymi w drugim przypadku (kiedy obie stacje były podłączone do tej samiej sieci VLAN) zakończyła się sukcesem. W przypadku podłączenia stacji roboczych do różnych sieci VLAN, weryfikacja połączenia ponownie zakończyła się niepowodzeniem.
 
-  \paragraph{}
-  TODO - opis tego co ponizej jest (roznice miedzy 0/1 a 0/24)
-
-  \begin{figure}[htbp]
+  \begin{figure}[H]
     \begin{center}
       \includegraphics[width=\textwidth]{img/t9.PNG}
-      \caption{Wynik polecenia $show\ vlan$ na przełączniku S1 po konfiguracji połączenia trunk}
+      \caption{Wynik polecenia \texttt{show vlan} na przełączniku S1 po konfiguracji połączenia trunk}
+      \label{fig:t9}
     \end{center}
   \end{figure}
 
-  \begin{figure}[htbp]
+  \paragraph{}
+  Rysunek \ref{fig:t9} przedstawia wynika polecenia \texttt{show vlan} na przełączniku S1 po konfiguracji połączenia trunk. Z domyślnej sieci VLAN wyłączony zostały port Fa0/24, który został skonfigurowany jako port łącza \emph{trunk}.
+
+  \begin{figure}[H]
     \begin{center}
       \includegraphics[width=\textwidth]{img/t10.PNG}
-      \caption{Wynik polecenia $show\ int\ fa\ 0/1\ switchport$ na przełączniku S1 po konfiguracji połączenia trunk}
+      \caption{Wynik polecenia \texttt{show int fa 0/1 switchport} na przełączniku S1 po konfiguracji połączenia trunk}
+      \label{fig:t10}
     \end{center}
   \end{figure}
 
-  \begin{figure}[htbp]
+  \begin{figure}[H]
     \begin{center}
       \includegraphics[width=\textwidth]{img/t11.PNG}
-      \caption{Wynik polecenia $show\ int\ fa\ 0/24\ switchport$ na przełączniku S1 po konfiguracji połączenia trunk}
+      \caption{Wynik polecenia \texttt{show int fa 0/24 switchport} na przełączniku S1 po konfiguracji połączenia trunk}
+      \label{fig:t11}
     \end{center}
   \end{figure}
+
+  \paragraph{}
+  Analizaucjąc Rysunki \ref{fig:t10} oraz \ref{fig:t11} widać różnice w konfiguracji portów przełącznika. W przypadku portu \texttt{Fa0/1} tryb pracy został ustawiony jako \emph{dynamic auto}, natomiast w przypadku portu \texttt{Fa0/24} jako \emph{trunk}.
 
 
   \subsection{Konfiguracja z trzema przełącznikami}
+  \begin{figure}[H]
+    \begin{center}
+      \includegraphics[width=\textwidth]{img/cc.PNG}
+      \caption{Konfiguracja z trzema przełącznikami}
+      \label{fig:cc}
+    \end{center}
+  \end{figure}
+
   \paragraph{}
-  TODO - podlaczony
-  - dodanie vlanow
-  - konfiguracja trunkow na 0/23 i 0/24
+  Na przełączniku S3 zostały skonfigurowane sieci VLAN oraz łącza \emph{trunk} na portach \texttt{Fa0/23} oraz \texttt{Fa0/24} za pomocą poniższych komend.
 
   \begin{verbatim}
     Switch(config)#interface fa0/23
@@ -243,18 +287,39 @@
   \end{verbatim}
 
   \paragraph{}
-  TODO - weryfikacja
+  Połączenie między przełącznikami S1 oraz S2 zostało rozłączone i zestawione według schematu na Rysunku \ref{fig:cc}.
+
+  \paragraph{}
+  Weryfikacja została przeprowadzaona identycznie jak w punkcie 2.6. Wyniki weryfikacji okazały sie zgodne z poprzednimi.
+
+
 
   \subsection{Analiza i konfiguracja protokołu STP}
-  \paragraph{}
-  TODO - zostaly podlaczone
-
-  \begin{figure}[htbp]
+  \begin{figure}[H]
     \begin{center}
-      \includegraphics[width=\textwidth]{img/t13.PNG}
-      \caption{Wynik polecenia $show\ spanning-tree$ na przełączniku S1}
+      \includegraphics[width=\textwidth]{img/dd.PNG}
+      \caption{Konfiguracja z trzema przełącznikami}
+      \label{fig:dd}
     \end{center}
   \end{figure}
 
+  \paragraph{}
+  Przełączniki zostały podłączone zgodnie ze schematem na Rysunku \ref{fig:dd}.
+
+  \begin{figure}[H]
+    \begin{center}
+      \includegraphics[width=\textwidth]{img/t13.PNG}
+      \caption{Wynik polecenia \texttt{show spanning-tree} na przełączniku S1}
+    \end{center}
+  \end{figure}
+
+  \paragraph{}
+  Komenda \texttt{show spanning-tree} pokazuje skonfigurowane sieci VLAN. Dla każdej sieci VLAN przedstawiona jest lista portów przypisanych do danej sieci, priorytet. TODO
+
+
+  \section{Wnioski}
+  \paragraph{}
+  W przypadku konieczności dynamicznych zmian w strukturze sieci najlepszym rozwiązaniem może okazać się odseparowania logicznej struktury sieci od struktury fizycznej za pomocą wirtualnych sieci LAN.
+  Wirtualne sieci LAN znacznie ułatwiają przenoszenie stacji roboczych między podsieciami oraz dodawanie nowych stacji roboczych do instniejących już sieci. Usprawniają też nadzorowanie ruchu w sieci, a także poprawiają bezpieczeństwo.
 
 \end{document}
