--- a/pea-projekt/projekt2_spr/projekt2.tex
+++ b/pea-projekt/projekt2_spr/projekt2.tex
@@ -111,7 +111,120 @@ Jezykiem implementacji algorytmu jest $Scala$ w wersji $2.9.1$ działająca na $
   
 \section{Testy}
 \paragraph{}
-TODO
+Testy algorytmu symulowanego wyżarzania przeprowadzone zostały dla trzech zestawów testów o różnym rozmiarze porblemu $n$, każdy składający się ze 125 instancji. Parametry podstawowe jak $T_{min}$ i $T_{max}$ w przypadku każdego testu były takie same. Zmieniany natomiast był parametr $T_{d}$.
+\paragraph{}
+Jako wyniki testów przedstawiamy średni czas liczenia wszystkich instancji dla danego rozmiaru problemu - $\bar{t}$, a także średni błąd wzgledny  rozwiązań dla każdej instancji - $\bar{x}$. Według wzoru : \\
+\begin{equation}
+    \bar{t} = \frac{\Sigma_{j=1}^{n}\frac{\Sigma_{i=1}^{k}t_{i}}{k}}{n}
+\end{equation}
+\begin{equation}
+    \bar{x} = \frac{\Sigma_{j=1}^{n}\frac{\Sigma_{i=1}^{k}x_{i}}{k}}{n}
+\end{equation}
+gdzie : \\
+\begin{itemize}
+  \item $k$ - ilość rozwiązań w instancji
+  \item $n$ - ilość instancji danego problemu
+\end{itemize}
+\paragraph{}
+Parametry niezmienne : 
+\begin{itemize}
+  \item $T_{min} = 0.01$
+  \item $T_{max} = 100$
+\end{itemize}
+\newpage
+\subsection{Pełny przebieg dla parametrów $k=5$ i $t_{size} = 7$}
+\subsubsection{n = 40}
+\begin{center}
+    \begin{tabular}{|c|c|c|}
+      \hline
+       $T_{d}$ & Time & Difference \\ \hline
+        10  &24,01&   106,56\\ \hline
+        100 &195,63 & 10,97\\ \hline
+        200 &386,48 & 5,88\\ \hline
+    \end{tabular}
+\end{center}
+
+\begin{figure}[htbp]
+  \begin{center}
+         \includegraphics[scale = 0.7]{charts/time40.PNG}
+         \caption{Czas rozwiązywania w zależności od parametru $T_d$}
+  \end{center}
+\end{figure}
+
+\begin{figure}[htbp]
+  \begin{center}
+         \includegraphics[scale=0.8]{charts/diff40.PNG}
+         \caption{Błąd względny rozwiązywania w zależności od parametru $T_d$}
+  \end{center}
+\end{figure}
+
+\newpage
+\subsubsection{n = 50}
+\begin{center}
+    \begin{tabular}{|c|c|c|}
+      \hline
+       $T_{d}$ & Time & Difference \\ \hline
+       10 & 51,38 &  326,49 \\ \hline
+            100 &422,22 & 11,11\\ \hline
+            200& 836,04  &7,26\\ \hline
+  \end{tabular}
+\end{center}
+
+\begin{figure}[htbp]
+  \begin{center}
+         \includegraphics[scale=0.8]{charts/time50.PNG}
+         \caption{Czas rozwiązywania w zależności od parametru $T_d$}
+  \end{center}
+\end{figure}
+
+\begin{figure}[htbp]
+  \begin{center}
+         \includegraphics[scale=0.8]{charts/diff50.PNG}
+         \caption{Błąd względny rozwiązywania w zależności od parametru $T_d$}
+  \end{center}
+\end{figure}
+
+\newpage
+\subsubsection{n = 100}
+\begin{center}
+    \begin{tabular}{|c|c|c|}
+      \hline
+       $T_{d}$ & Time & Difference \\ \hline
+          10&    709,64 & 1338,36\\ \hline
+            100 &6777,35 &51,81\\ \hline
+            200 &13555,07 &   37,12\\ \hline
+
+  \end{tabular}
+\end{center}
+
+\begin{figure}[htbp]
+  \begin{center}
+         \includegraphics[scale=0.8]{charts/time100.PNG}
+         \caption{Czas rozwiązywania w zależności od parametru $T_d$}
+  \end{center}
+\end{figure}
+
+\begin{figure}[htbp]
+  \begin{center}
+         \includegraphics[scale=0.8]{charts/diff100.PNG}
+         \caption{Błąd względny rozwiązywania w zależności od parametru $T_d$}
+  \end{center}
+\end{figure}
+\newpage
+\subsubsection{Porównanie wszytskich zadań}
+\begin{figure}[htbp]
+  \begin{center}
+         \includegraphics[scale=0.8]{charts/timeAll.PNG}
+         \caption{Czas rozwiązywania w zależności od parametru $T_d$}
+  \end{center}
+\end{figure}
+
+\begin{figure}[htbp]
+  \begin{center}
+         \includegraphics[scale=0.8]{charts/diffAll.PNG}
+         \caption{Błąd względny rozwiązywania w zależności od parametru $T_d$}
+  \end{center}
+\end{figure}
 
 \section{Wnioski}
 \paragraph{}
