--- a/pea-projekt/projekt2_spr/projekt2.tex
+++ b/pea-projekt/projekt2_spr/projekt2.tex
@@ -111,7 +111,7 @@ Jezykiem implementacji algorytmu jest $Scala$ w wersji $2.9.1$ działająca na $
   
 \section{Testy}
 \paragraph{}
-Testy algorytmu symulowanego wyżarzania przeprowadzone zostały dla trzech zestawów testów o różnym rozmiarze porblemu $n$, każdy składający się ze 125 instancji. Parametry podstawowe jak $T_{min}$ i $T_{max}$ w przypadku każdego testu były takie same. Zmieniany natomiast był parametr $T_{d}$.
+Test algorytmu tabu search przeprowadzony został dla trzech zestawów testów o różnym rozmiarze, każdy składający się ze 125 instancji. 
 \paragraph{}
 Jako wyniki testów przedstawiamy średni czas liczenia wszystkich instancji dla danego rozmiaru problemu - $\bar{t}$, a także średni błąd wzgledny  rozwiązań dla każdej instancji - $\bar{x}$. Według wzoru : \\
 \begin{equation}
