--- a/pea-projekt/projekt2_spr/projekt2.tex
+++ b/pea-projekt/projekt2_spr/projekt2.tex
@@ -80,7 +80,15 @@ Przebieg algorytmu :
     % morekeywords={*,...}            % if you want to add more keywords to the set
     }
     \lstinputlisting{kod/pseudokod.txt}
-
+    \paragraph{}
+    gdzie : 
+    \begin{itemize}
+        \item $S$ - funkcja generująca listę możliwych ruchów
+        \item $F$ - funkcja kosztu/celu
+        \item $NS$ - funkcja generująca nowy stan
+        \item $SR$ - funkcja generująca nowy losowy stan
+    \end{itemize}
+\newpage
 \section{Implementacja}
 \paragraph{}
 Jezykiem implementacji algorytmu jest $Scala$ w wersji $2.9.1$ działająca na $JVM$.
