--- a/technologie-sieciowe-projekt/projekt.tex
+++ b/technologie-sieciowe-projekt/projekt.tex
@@ -8,6 +8,7 @@
 \usepackage{graphicx,pdflscape}
 \usepackage{placeins}
 \usepackage[final]{pdfpages}
+\usepackage{longtable}
 
 
 \title{Technologie sieciowe 2 - projekt}
